Hot fix: Change overflow to overflow-y

--- a/frontend/src/assets/utils.css
+++ b/frontend/src/assets/utils.css
@@ -44,7 +44,7 @@
     /* min-height: 500px; */
     height: fit-content;
     max-height: min(70vh, 1250px);
-    overflow: scroll;
+    overflow-y: scroll;
 
     margin-inline: -8px;
     padding: 8px 8px;
